--- a/directory.html
+++ b/directory.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+   <head>
+   
+   <title>directory</title>
+   <link rel="stylesheet" type="text/css" href="masterstylesheet.css">
+   
+</head>
+   <body>
+   
+   <div class="Linkbloc">
+   </div>
+   
+     </body>
+</html>
