--- a/directory.html
+++ b/directory.html
@@ -8,7 +8,16 @@
 </head>
    <body>
    
-   <div class="Linkbloc">
+   <div class="leftsidenav">
+   
+   <a href="homepage.php">back</a>
+   
+   </div>
+   
+   <div class="main">
+   
+   <p> contents coming soon! </p>
+   
    </div>
    
      </body>
