--- a/directory.html
+++ b/directory.html
@@ -18,7 +18,7 @@
    
    <p> contents coming soon! </p>
    
-   <a href="shoppingcart.php">shoppingcart</a>
+   <a href="browsingpage.html">browse wares</a>
    
    </div>
    
