added some files

--- a/directory.html
+++ b/directory.html
@@ -19,6 +19,7 @@
    <p> contents coming soon! </p>
    
    <a href="browsingpage.php">browse wares</a>
+   <a href="viewScriptures.php">scripture team activty</a>
    
    </div>
    
