--- a/directory.html
+++ b/directory.html
@@ -21,6 +21,9 @@
    <a href="browsingpage.php">browse wares</a>
    <br> 
    <a href="viewScriptures.php">scripture team activty</a>
+   <br> 
+   <a href="viewBookRepository.php">week 5 connection to database</a>
+   
    
    </div>
    
