did week 6 team activity

--- a/directory.html
+++ b/directory.html
@@ -23,6 +23,8 @@
    <a href="viewScriptures.php">scripture team activty</a>
    <br> 
    <a href="viewBookRepository.php">week 5 connection to database</a>
+   <br> 
+   <a href="topicEntry.php">topic entry team activity</a>
    
    
    </div>
