--- a/directory.html
+++ b/directory.html
@@ -24,7 +24,7 @@
    <br> 
    <a href="viewBookRepository.php">week 5 connection to database</a>
    <br> 
-   <a href="topicEntry.php">topic entry team activity</a>
+   <a href="team06\topicEntry.php">topic entry team activity</a>
    
    
    </div>
