--- a/directory.html
+++ b/directory.html
@@ -20,7 +20,7 @@
    
    <a href="browsingpage.php">browse wares</a>
    <br> 
-   <a href="viewScriptures.php">scripture team activty</a>
+   <a href="team05/viewScriptures.php">scripture team activty</a>
    <br> 
    <a href="viewBookRepository.php">week 5 connection to database</a>
    <br> 
