added team07 files

--- a/directory.html
+++ b/directory.html
@@ -25,6 +25,8 @@
    <a href="viewBookRepository.php">week 5 connection to database</a>
    <br> 
    <a href="team06/topicEntry.php">topic entry team activity</a>
+   <br>
+   <a href="team07/signUp.php">topic entry team activity</a>
    
    
    </div>
