updated directory and showbook

--- a/directory.html
+++ b/directory.html
@@ -26,7 +26,7 @@
    <br> 
    <a href="team06/topicEntry.php">topic entry team activity</a>
    <br>
-   <a href="team07/signUp.php">topic entry team activity</a>
+   <!--<a href="team07/signUp.php">topic entry team activity</a>-->
    
    
    </div>
